Bug 1149042 - Call AttributeWillChange before a style="" attribute gets created when touching element.style. r=smaug